--- a/project/scraper/templates/base.html
+++ b/project/scraper/templates/base.html
@@ -16,9 +16,9 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
   <a class="navbar-brand" href="/">Scraper USD Rate</a>
   <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="/fetch">USD Rate</a>
-    </li>
+{#    <li class="nav-item">#}
+{#      <a class="nav-link" href="/fetch">USD Rate</a>#}
+{#    </li>#}
   </ul>
 </nav>
 
