--- a/project/scraper/templates/base.html
+++ b/project/scraper/templates/base.html
@@ -22,19 +22,17 @@
   </ul>
 </nav>
 
-<div class="container" style="margin-top:80px;">
-  <div class="jumbotron" style="padding: 1em;">
+<div class="container" style="margin-top:80px; margin-bottom: 50px;">
+ <div class="jumbotron" style="padding: 1em;">
     <h1>Scraper USD Rate</h1>
     <p>The report came from www.floatrates.com json source</p>
-    <p>Last fetched on : </p>
+    <p>Last fetched on : {{ last_fetched }}</p>
     <form action="{{ url_for('scraper.fetch') }}" method="get" class="text-center" style="margin-top: 20px;">
         <div class="form-example-int mg-t-15">
             <button class="btn btn-success notika-btn-success">Get the latest data</button>
         </div>
     </form>
   </div>
-
-
   {% block body %}
 
   {% endblock %}
