--- a/project/scraper/templates/usd-rates.html
+++ b/project/scraper/templates/usd-rates.html
@@ -1,7 +1,6 @@
 {%  extends 'base.html' %}
 
 {% block body %}
-
 <table id="records" class="table table-striped table-bordered" style="width:100%">
     <thead class="thead-dark">
       <tr>
@@ -22,5 +21,11 @@
     {% endfor %}
     </tbody>
   </table>
+
+ <form action="{{ url_for('scraper.csv_download') }}" method="get" class="text-center" style="margin-top: 20px;">
+         <div class="form-example-int mg-t-15">
+           <button class="btn btn-success notika-btn-success">Export CSV</button>
+         </div>
+ </form>
 
 {% endblock %}
