--- a/project/scraper/templates/usd-rates.html
+++ b/project/scraper/templates/usd-rates.html
@@ -22,10 +22,9 @@
     </tbody>
   </table>
 
- <form action="{{ url_for('scraper.csv_download') }}" method="get" class="text-center" style="margin-top: 20px;">
-         <div class="form-example-int mg-t-15">
-           <button class="btn btn-success notika-btn-success">Export CSV</button>
-         </div>
- </form>
+<a href="{{ url_for('scraper.csv_download') }}"><button class="btn btn-success notika-btn-success">Export CSV</button></a>
+<a href="{{ url_for('scraper.add_to_sheet') }}"><button class="btn btn-success notika-btn-success">Update data to spreadsheet</button></a>
+<a href="https://docs.google.com/spreadsheets/d/1UkQmBGB-Be2Yp7TevZXWgbI0FLvpToetSliw8Yarz-g/edit#gid=2056634279" target="_blank"><button class="btn btn-success notika-btn-success">View on google sheet</button></a>
+
 
 {% endblock %}
